--- a/TAXA - Options Data Analyzer.ipynb
+++ b/TAXA - Options Data Analyzer.ipynb
@@ -291,12 +291,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>deal_type_zone</th>\n",
+       "      <th>stock_price</th>\n",
+       "      <th>strike</th>\n",
+       "      <th>bid</th>\n",
+       "      <th>TSE</th>\n",
+       "      <th>TAXA</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>option_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>PETRI251</th>\n",
+       "      <td>ITM</td>\n",
+       "      <td>27.07</td>\n",
+       "      <td>25.46</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-5.947543</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PETRI258</th>\n",
+       "      <td>ITM</td>\n",
+       "      <td>27.07</td>\n",
+       "      <td>25.71</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-5.024012</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PETRI266</th>\n",
+       "      <td>ITM</td>\n",
+       "      <td>27.07</td>\n",
+       "      <td>25.96</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>-0.406354</td>\n",
+       "      <td>3.694126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PETRI269</th>\n",
+       "      <td>ITM</td>\n",
+       "      <td>27.07</td>\n",
+       "      <td>26.21</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>-2.807536</td>\n",
+       "      <td>0.369413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PETRI271</th>\n",
+       "      <td>ITM</td>\n",
+       "      <td>27.07</td>\n",
+       "      <td>26.46</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>-2.031769</td>\n",
+       "      <td>0.221648</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PETRI274</th>\n",
+       "      <td>ITM</td>\n",
+       "      <td>27.07</td>\n",
+       "      <td>26.71</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>-1.292944</td>\n",
+       "      <td>0.036941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PETRI261</th>\n",
+       "      <td>ITM</td>\n",
+       "      <td>27.07</td>\n",
+       "      <td>26.96</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>-0.036941</td>\n",
+       "      <td>0.369413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PETRI279</th>\n",
+       "      <td>OTM</td>\n",
+       "      <td>27.07</td>\n",
+       "      <td>27.21</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.960473</td>\n",
+       "      <td>0.443295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PETRI281</th>\n",
+       "      <td>OTM</td>\n",
+       "      <td>27.07</td>\n",
+       "      <td>27.46</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>1.810122</td>\n",
+       "      <td>0.369413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PETRI278</th>\n",
+       "      <td>OTM</td>\n",
+       "      <td>27.07</td>\n",
+       "      <td>27.71</td>\n",
+       "      <td>1.38</td>\n",
+       "      <td>7.462135</td>\n",
+       "      <td>5.097894</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PETRI286</th>\n",
+       "      <td>OTM</td>\n",
+       "      <td>27.07</td>\n",
+       "      <td>27.96</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>6.981899</td>\n",
+       "      <td>3.694126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PETRI254</th>\n",
+       "      <td>OTM</td>\n",
+       "      <td>27.07</td>\n",
+       "      <td>28.21</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>4.839306</td>\n",
+       "      <td>0.628001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PETRI276</th>\n",
+       "      <td>OTM</td>\n",
+       "      <td>27.07</td>\n",
+       "      <td>28.46</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>8.828962</td>\n",
+       "      <td>3.694126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PETRI289</th>\n",
+       "      <td>OTM</td>\n",
+       "      <td>27.07</td>\n",
+       "      <td>28.96</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>8.865903</td>\n",
+       "      <td>1.884004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PETRI291</th>\n",
+       "      <td>OTM</td>\n",
+       "      <td>27.07</td>\n",
+       "      <td>29.21</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>10.343554</td>\n",
+       "      <td>2.438123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PETRI294</th>\n",
+       "      <td>OTM</td>\n",
+       "      <td>27.07</td>\n",
+       "      <td>29.46</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>11.267085</td>\n",
+       "      <td>2.438123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PETRI299</th>\n",
+       "      <td>OTM</td>\n",
+       "      <td>27.07</td>\n",
+       "      <td>29.96</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>12.818618</td>\n",
+       "      <td>2.142593</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            deal_type_zone  stock_price  strike   bid        TSE      TAXA\n",
+       "option_name                                                               \n",
+       "PETRI251               ITM        27.07   25.46  0.00  -5.947543  0.000000\n",
+       "PETRI258               ITM        27.07   25.71  0.00  -5.024012  0.000000\n",
+       "PETRI266               ITM        27.07   25.96  1.00  -0.406354  3.694126\n",
+       "PETRI269               ITM        27.07   26.21  0.10  -2.807536  0.369413\n",
+       "PETRI271               ITM        27.07   26.46  0.06  -2.031769  0.221648\n",
+       "PETRI274               ITM        27.07   26.71  0.01  -1.292944  0.036941\n",
+       "PETRI261               ITM        27.07   26.96  0.10  -0.036941  0.369413\n",
+       "PETRI279               OTM        27.07   27.21  0.12   0.960473  0.443295\n",
+       "PETRI281               OTM        27.07   27.46  0.10   1.810122  0.369413\n",
+       "PETRI278               OTM        27.07   27.71  1.38   7.462135  5.097894\n",
+       "PETRI286               OTM        27.07   27.96  1.00   6.981899  3.694126\n",
+       "PETRI254               OTM        27.07   28.21  0.17   4.839306  0.628001\n",
+       "PETRI276               OTM        27.07   28.46  1.00   8.828962  3.694126\n",
+       "PETRI289               OTM        27.07   28.96  0.51   8.865903  1.884004\n",
+       "PETRI291               OTM        27.07   29.21  0.66  10.343554  2.438123\n",
+       "PETRI294               OTM        27.07   29.46  0.66  11.267085  2.438123\n",
+       "PETRI299               OTM        27.07   29.96  0.58  12.818618  2.142593"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "updated_ticks = estrategies.update_quotes(just_last_update=True,mode=InformationType.Real_Time)\n",
+    "ticks_to_process = updated_ticks[1]\n",
+    "options_updated = []\n",
+    "for i in ticks_to_process:\n",
+    "    options_updated.append(i.__dict__)\n",
+    "\n",
+    "df_options_updated = convert_dict_from_update_ticks_to_dataframe(options_updated)\n",
+    "df_options_updated.reset_index()\n",
+    "df_options_updated = df_options_updated.set_index('option_name')\n",
+    "df_options_updated"
+   ]
   },
   {
    "cell_type": "code",
