added thl compare to opportunities monitor

--- a/THL - Fly - Calendar Lines - Options Data Analyzer.ipynb
+++ b/THL - Fly - Calendar Lines - Options Data Analyzer.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 109,
    "metadata": {
     "scrolled": true
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "29.46    0.83              OTM  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,10 +353,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>option_name_x</th>\n",
+       "      <th>option_name_y</th>\n",
+       "      <th>thl_percent_of_strike</th>\n",
+       "      <th>thl_cost</th>\n",
+       "      <th>bid_x</th>\n",
+       "      <th>ask_y</th>\n",
+       "      <th>deal_type_zone_y</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>strike</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>27.96</th>\n",
+       "      <td>PETRI286</td>\n",
+       "      <td>PETRJ278</td>\n",
+       "      <td>1.716738</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>1.32</td>\n",
+       "      <td>1.80</td>\n",
+       "      <td>OTM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28.21</th>\n",
+       "      <td>PETRI254</td>\n",
+       "      <td>PETRJ290</td>\n",
+       "      <td>2.445941</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>1.16</td>\n",
+       "      <td>1.85</td>\n",
+       "      <td>OTM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29.21</th>\n",
+       "      <td>PETRI291</td>\n",
+       "      <td>PETRJ300</td>\n",
+       "      <td>2.636084</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>1.52</td>\n",
+       "      <td>OTM</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       option_name_x option_name_y  thl_percent_of_strike  thl_cost  bid_x  \\\n",
+       "strike                                                                       \n",
+       "27.96       PETRI286      PETRJ278               1.716738      0.48   1.32   \n",
+       "28.21       PETRI254      PETRJ290               2.445941      0.69   1.16   \n",
+       "29.21       PETRI291      PETRJ300               2.636084      0.77   0.75   \n",
+       "\n",
+       "        ask_y deal_type_zone_y  \n",
+       "strike                          \n",
+       "27.96    1.80              OTM  \n",
+       "28.21    1.85              OTM  \n",
+       "29.21    1.52              OTM  "
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "return_of_funcion['thl_next_month']"
+   ]
   },
   {
    "cell_type": "code",
