added function to ratio module send buy and sell option

--- a/BUTTERFLY - Options Data Analyzer.ipynb
+++ b/BUTTERFLY - Options Data Analyzer.ipynb
@@ -2,32 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sqlalchemy import extract, desc\n",
     "import datetime\n",
-    "import models as db\n",
     "import time\n",
     "import MetaTrader5 as mt5\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "import options_estrategies as opt_est\n",
+    "from options_estrategies import Option_Due, InformationType\n",
+    "import models as model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "if not mt5.initialize():\n",
     "    print(\"initialize() failed\")\n",
-    "    mt5.shutdown()\n"
+    "    mt5.shutdown()\n",
+    "\n",
+    "estrategies = opt_est.options_estrategies(model, model.PETR4, model.PETR4_OPTIONS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,45 +209,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_quotes():\n",
-    "    due_dates = db.session.query(db.PETR4.due_date).distinct().filter(db.PETR4.due_date > datetime.datetime.today()).limit(5)\n",
-    "    due_dates = list(due_dates)\n",
-    "\n",
-    "    month_deadline = due_dates[0].due_date\n",
-    "    next_month_dealine = due_dates[1].due_date\n",
-    "    after_next_month_dealine = due_dates[2].due_date\n",
-    "    long_due = due_dates[3].due_date\n",
-    "\n",
-    "    this_month = datetime.datetime.today().date()\n",
-    "    diff_betwen_dates = month_deadline - this_month\n",
-    "\n",
-    "    if diff_betwen_dates.days < 5:\n",
-    "        month_deadline = next_month_dealine\n",
-    "        next_month_dealine = after_next_month_dealine\n",
-    "        after_next_month_dealine = long_due\n",
-    "\n",
-    "    last_date = db.session.query(db.PETR4_OPTIONS).filter(db.PETR4_OPTIONS.due_date == month_deadline).order_by(desc(db.PETR4_OPTIONS.updated_at)).first()\n",
-    "    month_last_ticks = db.session.query(db.PETR4_OPTIONS).filter(db.PETR4_OPTIONS.updated_at == last_date.updated_at, db.PETR4_OPTIONS.due_date == month_deadline).order_by(db.PETR4_OPTIONS.strike).all()\n",
-    "    next_month_last_ticks = db.session.query(db.PETR4_OPTIONS).filter(db.PETR4_OPTIONS.updated_at == last_date.updated_at, db.PETR4_OPTIONS.due_date == next_month_dealine).order_by(db.PETR4_OPTIONS.strike).all()\n",
-    "    after_next_month_last_ticks = db.session.query(db.PETR4_OPTIONS).filter(db.PETR4_OPTIONS.updated_at == last_date.updated_at, db.PETR4_OPTIONS.due_date == after_next_month_dealine).order_by(db.PETR4_OPTIONS.strike).all()\n",
-    "    \n",
-    "    #for tick in month_last_ticks:\n",
-    "     #   print(tick.updated_at, tick.timestamp_option, tick.option_name, tick.strike, tick.deal_type_zone, tick.stock_price, tick.bid, tick.ask, tick.last_tick)        \n",
-    "    \n",
-    "    return [month_last_ticks,next_month_last_ticks,after_next_month_last_ticks]\n",
+    "updated_ticks = estrategies.update_quotes(just_last_update=True,mode=InformationType.Offline)\n",
     "       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "this_due = updated_ticks[0]\n",
+    "next_due = updated_ticks[1]\n",
+    "after_next_due = updated_ticks[1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -276,146 +267,64 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>PETRH276: 1.73, PETRH261: 1.56, PETRH256:1.43</td>\n",
-       "      <td>0.04</td>\n",
+       "      <td>PETRH276: 1.36, PETRH261: 1.19, PETRH256:1.06</td>\n",
+       "      <td>4.000000e-02</td>\n",
        "      <td>0.21</td>\n",
-       "      <td>0.04</td>\n",
+       "      <td>4.000000e-02</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-1.95</td>\n",
+       "      <td>0.52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>PETRH256: 1.43, PETRH284: 1.27, PETRH247:1.16</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>0.05</td>\n",
+       "      <td>PETRH256: 1.06, PETRH284: 0.94, PETRH247:0.85</td>\n",
+       "      <td>3.000000e-02</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>3.000000e-02</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-0.14</td>\n",
+       "      <td>2.36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>PETRH284: 1.29, PETRH247: 1.14, PETRH289:1.04</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>0.05</td>\n",
+       "      <td>PETRH284: 0.96, PETRH247: 0.84, PETRH289:0.74</td>\n",
+       "      <td>2.000000e-02</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>2.000000e-02</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.76</td>\n",
+       "      <td>3.29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>PETRH247: 1.16, PETRH289: 1.03, PETRH279:0.93</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>0.03</td>\n",
+       "      <td>PETRH289: 0.74, PETRH279: 0.67, PETRH294:0.6</td>\n",
+       "      <td>-1.110223e-16</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>-1.110223e-16</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.66</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>PETRH289: 1.04, PETRH279: 0.92, PETRH294:0.83</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>PETRH279: 0.93, PETRH294: 0.82, PETRH243:0.74</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>PETRH294: 0.83, PETRH243: 0.72, PETRH299:0.65</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>PETRH243: 0.74, PETRH299: 0.64, PETRH251:0.57</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>PETRH299: 0.65, PETRH251: 0.56, PETRH304:0.5</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>PETRH251: 0.57, PETRH304: 0.49, PETRH306:0.44</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>PETRH304: 0.5, PETRH306: 0.43, PETRH309:0.39</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.96</td>\n",
+       "      <td>5.13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         BUTTERFLY  COST  MAX_PROFIT  \\\n",
-       "0   PETRH276: 1.73, PETRH261: 1.56, PETRH256:1.43   0.04        0.21   \n",
-       "1   PETRH256: 1.43, PETRH284: 1.27, PETRH247:1.16   0.05        0.20   \n",
-       "2   PETRH284: 1.29, PETRH247: 1.14, PETRH289:1.04   0.05        0.20   \n",
-       "3   PETRH247: 1.16, PETRH289: 1.03, PETRH279:0.93   0.03        0.22   \n",
-       "4   PETRH289: 1.04, PETRH279: 0.92, PETRH294:0.83   0.03        0.22   \n",
-       "5   PETRH279: 0.93, PETRH294: 0.82, PETRH243:0.74   0.03        0.22   \n",
-       "6   PETRH294: 0.83, PETRH243: 0.72, PETRH299:0.65   0.04        0.21   \n",
-       "7   PETRH243: 0.74, PETRH299: 0.64, PETRH251:0.57   0.03        0.22   \n",
-       "8    PETRH299: 0.65, PETRH251: 0.56, PETRH304:0.5   0.03        0.22   \n",
-       "9   PETRH251: 0.57, PETRH304: 0.49, PETRH306:0.44   0.03        0.22   \n",
-       "10   PETRH304: 0.5, PETRH306: 0.43, PETRH309:0.39   0.03        0.22   \n",
+       "                                        BUTTERFLY          COST  MAX_PROFIT  \\\n",
+       "0  PETRH276: 1.36, PETRH261: 1.19, PETRH256:1.06   4.000000e-02        0.21   \n",
+       "1  PETRH256: 1.06, PETRH284: 0.94, PETRH247:0.85   3.000000e-02        0.22   \n",
+       "2  PETRH284: 0.96, PETRH247: 0.84, PETRH289:0.74   2.000000e-02        0.23   \n",
+       "3   PETRH289: 0.74, PETRH279: 0.67, PETRH294:0.6  -1.110223e-16        0.25   \n",
        "\n",
-       "    MAX_LOSS  DIFF_BETWEEN_WINGS  PERCENT_2_MAX_PAYOFF  \n",
-       "0       0.04                 0.0                 -1.95  \n",
-       "1       0.05                 0.0                 -0.14  \n",
-       "2       0.05                 0.0                  0.76  \n",
-       "3       0.03                 0.0                  1.66  \n",
-       "4       0.03                 0.0                  2.56  \n",
-       "5       0.03                 0.0                  3.46  \n",
-       "6       0.04                 0.0                  4.36  \n",
-       "7       0.03                 0.0                  5.26  \n",
-       "8       0.03                 0.0                  6.16  \n",
-       "9       0.03                 0.0                  7.06  \n",
-       "10      0.03                 0.0                  7.96  "
+       "       MAX_LOSS  DIFF_BETWEEN_WINGS  PERCENT_2_MAX_PAYOFF  \n",
+       "0  4.000000e-02                 0.0                  0.52  \n",
+       "1  3.000000e-02                 0.0                  2.36  \n",
+       "2  2.000000e-02                 0.0                  3.29  \n",
+       "3 -1.110223e-16                 0.0                  5.13  "
       ]
      },
-     "execution_count": 141,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "updated_ticks = update_quotes()\n",
-    "this_due = updated_ticks[0]\n",
-    "next_due = updated_ticks[1]\n",
-    "after_next_due = updated_ticks[1]\n",
-    "\n",
     "butterfly_offline_data_dict = butterfly_cost(this_due,0.05,True)\n",
     "df_butterfly_offline = pd.DataFrame.from_dict(butterfly_offline_data_dict)\n",
     "df_butterfly_offline"
@@ -423,175 +332,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>BUTTERFLY</th>\n",
-       "      <th>COST</th>\n",
-       "      <th>MAX_PROFIT</th>\n",
-       "      <th>MAX_LOSS</th>\n",
-       "      <th>MAX_VOLUME</th>\n",
-       "      <th>DIFF_BETWEEN_WINGS</th>\n",
-       "      <th>PERCENT_2_MAX_PAYOFF</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>PETRH276: 1.73, PETRH261: 1.56, PETRH256:1.43</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>2300</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-1.95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>PETRH284: 1.29, PETRH247: 1.15, PETRH289:1.04</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>3100</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>PETRH247: 1.16, PETRH289: 1.03, PETRH279:0.93</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>15000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.66</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>PETRH289: 1.04, PETRH279: 0.92, PETRH294:0.83</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>3100</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>PETRH279: 0.93, PETRH294: 0.82, PETRH243:0.74</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>8100</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>PETRH294: 0.83, PETRH243: 0.72, PETRH299:0.65</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>53500</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>PETRH243: 0.74, PETRH299: 0.64, PETRH251:0.58</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>8100</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>PETRH299: 0.65, PETRH251: 0.56, PETRH304:0.51</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>81000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>PETRH251: 0.58, PETRH304: 0.49, PETRH306:0.44</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>89400</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>PETRH304: 0.51, PETRH306: 0.43, PETRH309:0.39</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>58100</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.96</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                        BUTTERFLY  COST  MAX_PROFIT  MAX_LOSS  \\\n",
-       "0  PETRH276: 1.73, PETRH261: 1.56, PETRH256:1.43   0.04        0.21      0.04   \n",
-       "1  PETRH284: 1.29, PETRH247: 1.15, PETRH289:1.04   0.03        0.22      0.03   \n",
-       "2  PETRH247: 1.16, PETRH289: 1.03, PETRH279:0.93   0.03        0.22      0.03   \n",
-       "3  PETRH289: 1.04, PETRH279: 0.92, PETRH294:0.83   0.03        0.22      0.03   \n",
-       "4  PETRH279: 0.93, PETRH294: 0.82, PETRH243:0.74   0.03        0.22      0.03   \n",
-       "5  PETRH294: 0.83, PETRH243: 0.72, PETRH299:0.65   0.04        0.21      0.04   \n",
-       "6  PETRH243: 0.74, PETRH299: 0.64, PETRH251:0.58   0.04        0.21      0.04   \n",
-       "7  PETRH299: 0.65, PETRH251: 0.56, PETRH304:0.51   0.04        0.21      0.04   \n",
-       "8  PETRH251: 0.58, PETRH304: 0.49, PETRH306:0.44   0.04        0.21      0.04   \n",
-       "9  PETRH304: 0.51, PETRH306: 0.43, PETRH309:0.39   0.04        0.21      0.04   \n",
-       "\n",
-       "   MAX_VOLUME  DIFF_BETWEEN_WINGS  PERCENT_2_MAX_PAYOFF  \n",
-       "0        2300                 0.0                 -1.95  \n",
-       "1        3100                 0.0                  0.76  \n",
-       "2       15000                 0.0                  1.66  \n",
-       "3        3100                 0.0                  2.56  \n",
-       "4        8100                 0.0                  3.46  \n",
-       "5       53500                 0.0                  4.36  \n",
-       "6        8100                 0.0                  5.26  \n",
-       "7       81000                 0.0                  6.16  \n",
-       "8       89400                 0.0                  7.06  \n",
-       "9       58100                 0.0                  7.96  "
-      ]
-     },
-     "execution_count": 142,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "butterfly_data_dict = butterfly_realtime(this_due,0.05,True)\n",
     "butterfly_data = pd.DataFrame.from_dict(butterfly_data_dict)\n",
@@ -622,13 +365,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": []
