added warning mute

--- a/THL - Fly - Calendar Lines - Options Data Analyzer.ipynb
+++ b/THL - Fly - Calendar Lines - Options Data Analyzer.ipynb
@@ -287,50 +287,119 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_thl = pd.merge(df_this_month, df_next_month, left_index=True, right_index=True)\n",
-    "df_thl_next_month = pd.merge(df_next_month, df_after_next_month, left_index=True, right_index=True)\n",
-    "df_thl_calendar = pd.merge(df_this_month, df_after_next_month, left_index=True, right_index=True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def thl_convert_dict_from_update_ticks_to_dataframe(data_thl):\n",
-    "    df_thl_compare = data_thl.copy()\n",
-    "    df_thl_compare[\"thl_cost\"] = (df_thl_compare['bid_x'] - df_thl_compare['ask_y'])*-1\n",
-    "    df_thl_compare[\"thl_percent_of_strike\"] = (df_thl_compare[\"thl_cost\"] / df_thl_compare.index)*100\n",
-    "    df_thl_compare = df_thl_compare[['option_name_x','option_name_y','thl_percent_of_strike','thl_cost','bid_x','ask_y','deal_type_zone_y']]\n",
-    "    df_thl_compare = df_thl_compare[df_thl_compare['ask_y'] > 0]\n",
-    "    return df_thl_compare"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "comparison_this_month = compare_to_dataframes_of_thl(df_thl)\n",
-    "comparison_next_month = compare_to_dataframes_of_thl(df_thl_next_month)\n",
-    "comparison_calendar = compare_to_dataframes_of_thl(df_thl_calendar)\n",
+    "last_warnings = []\n",
+    "alarme_to_remove = []\n",
     "\n",
-    "good_operation_THL = comparison_this_month[comparison_this_month['thl_percent_of_strike'] < 1.5]\n",
-    "good_operation_THL_next_month = comparison_next_month[comparison_next_month['thl_percent_of_strike'] < 1.5]\n",
-    "good_operation_calendar = comparison_calendar[comparison_calendar['thl_percent_of_strike'] < 1.5]\n",
+    "def check_exists_alarm(operation, option_name, time_expiration = 4):\n",
+    "    for i in range(0,len(last_warnings)):\n",
+    "        if last_warnings[i]['timestamp'] < (datetime.datetime.now() - datetime.timedelta(minutes=time_expiration)):\n",
+    "            alarme_to_remove.append(last_warnings[i])\n",
     "\n",
-    "if len(good_operation_THL.index) > 0:\n",
-    "    print(good_operation_THL)\n",
+    "    for i in range(0,len(alarme_to_remove)):\n",
+    "        last_warnings.remove(last_warnings[i])\n",
+    "        \n",
+    "    for i in range(0,len(last_warnings)):\n",
+    "        if last_warnings[i]['operation'] == str(operation) and last_warnings[i]['option_name'] == str(option_name):\n",
+    "            return True\n",
+    "        \n",
+    "    return False\n",
     "    \n",
-    "if len(good_operation_THL_next_month.index) > 0:\n",
-    "    print(good_operation_THL_next_month)\n",
-    "\n",
-    "if len(good_operation_calendar.index) > 0:\n",
-    "    print(good_operation_calendar) "
+    "    \n",
+    "def add_alarm(operation, option_name):\n",
+    "    warning = dict(operation=str(operation), option_name=str(option_name), timestamp=datetime.datetime.now())\n",
+    "    last_warnings.append(warning)\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'operation': 'THL',\n",
+       "  'option_name': 'PETRH243_PETRI289',\n",
+       "  'timestamp': datetime.datetime(2021, 7, 16, 13, 33, 29, 966036)}]"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_alarm('THL', 'PETRH243_PETRI289')\n",
+    "last_warnings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_exists_alarm('THL','PETRH243_PETRI289')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "last_warnings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'OPTION1OPTION2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-43-dbf49ad84789>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlast_warnings\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'OPTION1OPTION2'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mlast_warnings\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'OPTION1OPTION2'"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -344,36 +413,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "return_of_funcion = dict(thl=comparison_this_month, thl_next_month=comparison_next_month, thl_calendar=comparison_calendar)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "good_operation_THL"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "return_of_funcion['thl_next_month']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
